--- a/.drone.yml
+++ b/.drone.yml
@@ -16,10 +16,12 @@ steps:
   - git clone $DRONE_GIT_SSH_URL
 - name: build
   commands:
-  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make HCLOUD_TOKEN=$HCLOUD_TOKEN
   environment:
     GIT_SUDO:
       from_secret: git_sudo
+    HCLOUD_TOKEN:
+      from_secret: hcloud_token
 
 node:
   role: production
