--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,38 @@ node:
 ---
 kind: pipeline
 type: exec
+name: tf_apply
+
+platform:
+  os: linux
+  arch: amd64
+
+clone:
+  disable: true
+
+steps:
+- name: clone
+  commands:
+  - git clone --depth 1 $DRONE_GIT_SSH_URL
+- name: build
+  commands:
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make tf_apply HCLOUD_TOKEN=$HCLOUD_TOKEN
+  environment:
+    GIT_SUDO:
+      from_secret: git_sudo
+    HCLOUD_TOKEN:
+      from_secret: hcloud_token
+
+node:
+  role: production
+
+trigger:
+  target:
+  - apply
+
+---
+kind: pipeline
+type: exec
 name: report
 
 platform:
