--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
 - name: clone
   commands:
   - git clone $DRONE_GIT_SSH_URL
-- name: build
+- name: plan
   commands:
   - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make HCLOUD_TOKEN=$HCLOUD_TOKEN
   environment:
@@ -39,10 +39,7 @@ clone:
   disable: true
 
 steps:
-- name: clone
-  commands:
-  - git clone --depth 1 $DRONE_GIT_SSH_URL
-- name: build
+- name: apply
   commands:
   - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make tf_apply HCLOUD_TOKEN=$HCLOUD_TOKEN
   environment:
