--- a/.drone.yml
+++ b/.drone.yml
@@ -22,23 +22,6 @@ steps:
       from_secret: git_sudo
     HCLOUD_TOKEN:
       from_secret: hcloud_token
-
-node:
-  role: production
-
----
-kind: pipeline
-type: exec
-name: tf_apply
-
-platform:
-  os: linux
-  arch: amd64
-
-clone:
-  disable: true
-
-steps:
 - name: apply
   commands:
   - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make tf_apply HCLOUD_TOKEN=$HCLOUD_TOKEN
@@ -47,13 +30,12 @@ steps:
       from_secret: git_sudo
     HCLOUD_TOKEN:
       from_secret: hcloud_token
+  when:
+    target:
+    - apply
 
 node:
   role: production
-
-trigger:
-  target:
-  - apply
 
 ---
 kind: pipeline
