--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -8,3 +8,12 @@
       name: nginx
       state: latest
       update_cache: yes
+- name: Kubernetes
+  hosts: kubernetes
+  become: yes
+  tasks:
+  - name: Download K3s
+    ansible.builtin.get_url:
+      url: "https://github.com/k3s-io/k3s/releases/download/v1.29.3%2Bk3s1/k3s"
+      dest: "/usr/local/bin/k3s"
+      mode: "0755"
