--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -30,3 +30,12 @@
       enabled: true
       state: started
       daemon_reload: true
+  - name: Fetch Kube config
+    fetch:
+      src: /etc/rancher/k3s/k3s.yaml
+      dest: k3s.yaml
+  - name: Insert current host
+    replace:
+      path: k3s.yaml
+      regexp: "127\.0\.0\.1"
+      replace: inventory_hostname
