--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,10 @@ steps:
       from_secret: tf_http_username
     TF_HTTP_PASSWORD:
       from_secret: tf_http_password
+  when:
+    target:
+      exclude:
+      - apply
 - name: apply
   commands:
   - cd $DRONE_REPO_NAME && echo "$OPENSSH_PRIVATE_KEY" > id_rsa && echo "$NGINX_SSL_PRIVATE_KEY" > ansible/files/ssl/private.key && echo $GIT_SUDO | sudo -S make apply HCLOUD_TOKEN=$HCLOUD_TOKEN TF_HTTP_USERNAME=$TF_HTTP_USERNAME TF_HTTP_PASSWORD=$TF_HTTP_PASSWORD
@@ -45,6 +49,15 @@ steps:
   when:
     target:
     - apply
+- name: kube
+  commands:
+  - cd $DRONE_REPO_NAME && echo $GIT_SUDO | sudo -S make kubernetes_apply
+  environment:
+    GIT_SUDO:
+      from_secret: git_sudo
+  when:
+    target:
+    - kube
 
 node:
   role: production
