--- a/.drone.yml
+++ b/.drone.yml
@@ -30,6 +30,7 @@ steps:
     target:
       exclude:
       - apply
+      - kube
 - name: apply
   commands:
   - cd $DRONE_REPO_NAME && echo "$OPENSSH_PRIVATE_KEY" > id_rsa && echo "$NGINX_SSL_PRIVATE_KEY" > ansible/files/ssl/private.key && echo $GIT_SUDO | sudo -S make apply HCLOUD_TOKEN=$HCLOUD_TOKEN TF_HTTP_USERNAME=$TF_HTTP_USERNAME TF_HTTP_PASSWORD=$TF_HTTP_PASSWORD
