--- a/kubernetes/kadmos-test/templates/deployment.yaml
+++ b/kubernetes/kadmos-test/templates/deployment.yaml
@@ -18,5 +18,5 @@ spec:
       - image: nginx:latest
         name: nginx
         ports:
-        - containerPort: 80
+        - containerPort: {{ .Values.Port }}
           name: web
