--- a/kubernetes/kadmos-test/templates/ingress.yaml
+++ b/kubernetes/kadmos-test/templates/ingress.yaml
@@ -13,5 +13,7 @@ spec:
       - path: /
         pathType: Prefix
         backend:
-          serviceName: {{ .Release.Name }}
-          servicePort: 80
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: 80
