--- a/kubernetes/prometheus-adapter/values.yaml
+++ b/kubernetes/prometheus-adapter/values.yaml
@@ -135,12 +135,9 @@ rules:
   - seriesQuery: |
       traefik_service_requests_total{}
     resources:
-      overrides:
-        kubernetes_namespace: {resource: "namespace"}
-        kubernetes_pod_name: {resource: "pod"}
+      template: "<<.Resource>>"
     name:
-      matches: "^(.*)_total"
-      as: "${1}"
+      as: "traefik_rps"
     metricsQuery: |
       rate(<<.Series>>{<<.LabelMatchers>>}[5m])
 
