--- a/kubernetes/kube-metrics-adapter/templates/external-metrics-apiservice.yaml
+++ b/kubernetes/kube-metrics-adapter/templates/external-metrics-apiservice.yaml
@@ -1,5 +1,9 @@
 {{- if .Values.enableExternalMetricsApi }}
+{{- if .Capabilities.APIVersions.Has "apiregistration.k8s.io/v1" }}
+apiVersion: apiregistration.k8s.io/v1
+{{- else }}
 apiVersion: apiregistration.k8s.io/v1beta1
+{{- end }}
 kind: APIService
 metadata:
   name: v1beta1.external.metrics.k8s.io
