Specified default prometheus server for the adapter

--- a/kubernetes/kube-metrics-adapter/values.yaml
+++ b/kubernetes/kube-metrics-adapter/values.yaml
@@ -13,7 +13,7 @@ enableHostNetwork: false
 
 # Url to access prometheus
 prometheus:
-  url:
+  url: http://prometheus-server.monitoring.svc.cluster.local
 
 replicas: 1
 
